# multi-maf-solvers

./: .gitignore  Cargo.toml  INSTALL.md  README.md
src/: lib.rs
src/alg_af_dfs/: instance_ext.rs  logging.rs  mod.rs  solver.rs  state.rs
src/alg_approx/: mod.rs  simple_lower_bound.rs
src/alg_dbs_a/: logging.rs  mod.rs  solver.rs  stack_arena_tree.rs  state.rs  variants.rs
src/alg_dbs_lsi/: arena_tree_lsi_ext.rs  branch_result.rs  instance_lsi_ext.rs  logging.rs  lsi_instance.rs  lsi_solver.rs  mod.rs  r1_workspace.rs
src/alg_hp_dbs/: cluster_reduction.rs  hitting_pair_dbs.rs  logging.rs  mod.rs
src/common/: arena_tree_canonical_id.rs  generation_set.rs  mod.rs
src/maf_instance/: arena_tree.rs  arena_vertex.rs  instance.rs  mod.rs
src/preprocessing/: arena_tree_ext.rs  instance_ext.rs  mod.rs  reduce_and_solve.rs
