[package]
name = "multi-maf-solvers"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
itertools = "0.15.0"
pace26io = "0.2.0"
rustc-hash = "2.1.3"
smallvec = "1.15.1"

[features]
logging = []
assert_validity = []

# features for disabling parts of the DBS-LSI algorithm
LSI_DISABLE_LB_CALC = []
LSI_DISABLE_CLUSTER_REDUCTION = []
LSI_DISABLE_MODIFIED_BRANCHING = []
LSI_DISABLE_GLOBAL_PREPROCESSING = []
LSI_DISABLE_BINARY_SEARCH_ON_SOL = []

# add some more optimization in release mode
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
